--- a/pages/admin/components/sidebar.html
+++ b/pages/admin/components/sidebar.html
@@ -1,168 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sidebar</title>
-  <link
-   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-   rel="stylesheet"
-  />
-  <link
-   href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
-   rel="stylesheet"
-  />
-  <link
-   href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
-   rel="stylesheet"
-  />
-  <link rel="stylesheet" href="/css/admin/sidebar.css" />
-  <link
-   rel="stylesheet"
-   href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
-  />
- </head>
- <body>
-  <div class="sidebar">
-   <div class="logo">
-    <h5>BXU BAS</h5>
-   </div>
-   <div class="nav-links px-3">
-    <a href="#dashboard" class="active"
-     ><i class="bi bi-speedometer2"></i> Dashboard</a
-    >
-    <a href="#inspections"
-     ><i class="bi bi-exclamation-triangle"></i> Inspections</a
-    >
-    <a href="#inspector"><i class="bi bi-person"></i> Inspectors</a>
-    <!-- <a href="#notifications"><i class="bi bi-bell"></i> Notifications</a> -->
-    <a href="#reports"><i class="bi bi-file-earmark-text"></i> Reports</a>
-    <a href="#messages"><i class="bi bi-chat-dots"></i> Notices</a>
-    <a href="#profile"><i class="bi bi-person"></i> Profile</a>
-   </div>
-   <div class="logout">
-    <button id="logoutButton">
-     <i class="bi bi-box-arrow-right"></i> Logout
-    </button>
-   </div>
-  </div>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>Sidebar</title>
+      <link
+         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+         rel="stylesheet"
+      />
+      <link
+         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css"
+         rel="stylesheet"
+      />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+         rel="stylesheet"
+      />
+      <link rel="stylesheet" href="/css/admin/sidebar.css" />
+      <link
+         rel="stylesheet"
+         href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+      />
+   </head>
+   <body>
+      <div class="sidebar">
+         <div class="logo">
+            <img src="/assets/BXUBASWIDTH.png" alt="" style="width: 200px" />
+         </div>
+         <div class="nav-links px-3">
+            <a href="#dashboard" class="active"
+               ><i class="bi bi-speedometer2"></i> Dashboard</a
+            >
+            <a href="#inspections"
+               ><i class="bi bi-exclamation-triangle"></i> Inspections</a
+            >
+            <a href="#inspector"><i class="bi bi-person"></i> Inspectors</a>
+            <!-- <a href="#notifications"><i class="bi bi-bell"></i> Notifications</a> -->
+            <a href="#reports"
+               ><i class="bi bi-file-earmark-text"></i> Reports</a
+            >
+            <a href="#messages"><i class="bi bi-chat-dots"></i> Notices</a>
+            <a href="#profile"><i class="bi bi-person"></i> Profile</a>
+         </div>
+         <div class="logout">
+            <button id="logoutButton">
+               <i class="bi bi-box-arrow-right"></i> Logout
+            </button>
+         </div>
+      </div>
 
-  <div
-   id="content"
-   style="margin-left: 250px; padding: 100px 20px 20px 20px"
-  ></div>
+      <div
+         id="content"
+         style="margin-left: 250px; padding: 100px 20px 20px 20px"
+      ></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
-  <script type="module">
-   function loadContent(page, element, event) {
-    if (event) {
-     event.preventDefault();
-    }
+      <script type="module">
+         function loadContent(page, element, event) {
+            if (event) {
+               event.preventDefault();
+            }
 
-    localStorage.setItem("currentPage", page);
+            localStorage.setItem("currentPage", page);
 
-    fetch(`components/${page}`)
-     .then((response) => {
-      if (!response.ok) {
-       throw new Error("Network response was not ok");
-      }
-      return response.text();
-     })
-     .then((data) => {
-      const contentDiv = document.getElementById("content");
-      contentDiv.innerHTML = data;
+            fetch(`components/${page}`)
+               .then((response) => {
+                  if (!response.ok) {
+                     throw new Error("Network response was not ok");
+                  }
+                  return response.text();
+               })
+               .then((data) => {
+                  const contentDiv = document.getElementById("content");
+                  contentDiv.innerHTML = data;
 
-      // Dynamically load the page-specific script
-      loadPageScript(page);
+                  // Dynamically load the page-specific script
+                  loadPageScript(page);
 
-      const links = document.querySelectorAll(".nav-links a");
-      links.forEach((link) => link.classList.remove("active"));
+                  const links = document.querySelectorAll(".nav-links a");
+                  links.forEach((link) => link.classList.remove("active"));
 
-      if (element) {
-       element.classList.add("active");
-      }
-     })
-     .catch((error) => {
-      console.error("Error loading content:", error);
-      const contentDiv = document.getElementById("content");
-      contentDiv.innerHTML =
-       "<h2>Error loading the page. Please try again.</h2>";
-     });
-   }
+                  if (element) {
+                     element.classList.add("active");
+                  }
+               })
+               .catch((error) => {
+                  console.error("Error loading content:", error);
+                  const contentDiv = document.getElementById("content");
+                  contentDiv.innerHTML =
+                     "<h2>Error loading the page. Please try again.</h2>";
+               });
+         }
 
-   import CONFIG from "/scripts/config.js";
+         import CONFIG from "/scripts/config.js";
 
-   const apiUrl = CONFIG.API_URL;
+         const apiUrl = CONFIG.API_URL;
 
-   console.log(apiUrl);
+         console.log(apiUrl);
 
-   const handleLogout = async () => {
-    console.log("Logout button clicked"); // Debugging log
-    const response = await fetch(`${apiUrl}/admin/admin-logout`, {
-     method: "POST",
-     headers: {
-      "Content-Type": "application/json",
-      Authorization: `Bearer ${localStorage.getItem("authToken")}`,
-     },
-    });
-    const data = await response.json();
-    if (response.ok) {
-     localStorage.removeItem("authToken");
-     localStorage.clear();
-     window.location.href = "../auth/index.html";
-     Toastify({
-      text: "Logout successful",
-      duration: 3000,
-      close: true,
-      gravity: "top",
-      position: "right",
-      backgroundColor: "linear-gradient(to right, #00b09b, #96c93d)",
-     }).showToast();
-    } else {
-     alert(data.message);
-    }
-   };
+         const handleLogout = async () => {
+            console.log("Logout button clicked"); // Debugging log
+            const response = await fetch(`${apiUrl}/admin/admin-logout`, {
+               method: "POST",
+               headers: {
+                  "Content-Type": "application/json",
+                  Authorization: `Bearer ${localStorage.getItem("authToken")}`,
+               },
+            });
+            const data = await response.json();
+            if (response.ok) {
+               localStorage.removeItem("authToken");
+               localStorage.clear();
+               window.location.href = "../auth/index.html";
+               Toastify({
+                  text: "Logout successful",
+                  duration: 3000,
+                  close: true,
+                  gravity: "top",
+                  position: "right",
+                  backgroundColor:
+                     "linear-gradient(to right, #00b09b, #96c93d)",
+               }).showToast();
+            } else {
+               alert(data.message);
+            }
+         };
 
-   // Dynamically load the page-specific script
-   function loadPageScript(page) {
-    const scriptPath = `components/${page.replace(".html", ".js")}`;
-    const scriptElement = document.createElement("script");
-    scriptElement.src = scriptPath;
+         // Dynamically load the page-specific script
+         function loadPageScript(page) {
+            const scriptPath = `components/${page.replace(".html", ".js")}`;
+            const scriptElement = document.createElement("script");
+            scriptElement.src = scriptPath;
 
-    // Append the script to the document
-    scriptElement.onload = () => {
-     console.log(`Script for ${page} loaded successfully.`);
-    };
+            // Append the script to the document
+            scriptElement.onload = () => {
+               console.log(`Script for ${page} loaded successfully.`);
+            };
 
-    scriptElement.onerror = () => {
-     console.error(`Error loading script for ${page}.`);
-    };
+            scriptElement.onerror = () => {
+               console.error(`Error loading script for ${page}.`);
+            };
 
-    document.body.appendChild(scriptElement);
-   }
+            document.body.appendChild(scriptElement);
+         }
 
-   window.onload = function () {
-    const currentPage = localStorage.getItem("currentPage") || "dashboard.html";
-    loadContent(currentPage);
+         window.onload = function () {
+            const currentPage =
+               localStorage.getItem("currentPage") || "dashboard.html";
+            loadContent(currentPage);
 
-    // Add event listeners for navigation links
-    document.querySelectorAll(".nav-links a").forEach((link) => {
-     link.addEventListener("click", function (event) {
-      const page = this.getAttribute("href").substring(1) + ".html";
-      loadContent(page, this, event);
-     });
-    });
+            // Add event listeners for navigation links
+            document.querySelectorAll(".nav-links a").forEach((link) => {
+               link.addEventListener("click", function (event) {
+                  const page = this.getAttribute("href").substring(1) + ".html";
+                  loadContent(page, this, event);
+               });
+            });
 
-    // Add event listener for the logout button
-    const logoutButton = document.getElementById("logoutButton");
-    if (logoutButton) {
-     console.log("Logout button found"); // Debugging log
-     logoutButton.addEventListener("click", handleLogout);
-    } else {
-     console.error("Logout button not found");
-    }
-   };
-  </script>
- </body>
+            // Add event listener for the logout button
+            const logoutButton = document.getElementById("logoutButton");
+            if (logoutButton) {
+               console.log("Logout button found"); // Debugging log
+               logoutButton.addEventListener("click", handleLogout);
+            } else {
+               console.error("Logout button not found");
+            }
+         };
+      </script>
+   </body>
 </html>
